--- a/AucHouse/Reports/СписокЛотов/Templates/ОсновнаяСхемаКомпоновкиДанных.xml
+++ b/AucHouse/Reports/СписокЛотов/Templates/ОсновнаяСхемаКомпоновкиДанных.xml
@@ -1,24 +1,16 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.1">
-	<Subsystem uuid="d2c9c1a0-6b75-4f1a-b520-9348f7ade915">
+	<Template uuid="64843ba2-3b42-4080-a0c3-bba54f979db7">
 		<Properties>
-			<Name>Финансы</Name>
+			<Name>ОсновнаяСхемаКомпоновкиДанных</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Финансы</v8:content>
+					<v8:content>Основная схема компоновки данных</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
-			<IncludeHelpInContents>true</IncludeHelpInContents>
-			<IncludeInCommandInterface>true</IncludeInCommandInterface>
-			<Explanation/>
-			<Picture/>
-			<Content>
-				<xr:Item xsi:type="xr:MDObjectRef">Document.ПриемОплаты</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">Enum.ТипОплаты</xr:Item>
-			</Content>
+			<TemplateType>DataCompositionSchema</TemplateType>
 		</Properties>
-		<ChildObjects/>
-	</Subsystem>
+	</Template>
 </MetaDataObject>
